# standard-python-poetry

./: .flake8  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml  requirements-dev.in  requirements-dev.txt  setup.py
