[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool]

[tool.black]
line-length = 120

[tool.coverage]

[tool.coverage.report]
fail_under = 100
show_missing = true
skip_empty = true
exclude_lines = ["if __name__ == .__main__.:"]

[tool.flake8]
max_line_length = 120
ignore = ["B506", "D100", "D104", "S101"]
exclude = [".git", ".venv", "__pycache__", "build", "dist", "setup.py"]
max-complexity = 10
docstring_style = "google"
strictness = "full"

[tool.isort]
line_length = 120

[tool.mypy]
strict = true

[tool.poetry]
name = "example"
version = "0.1.0"
description = ""
authors = ["Tory Clasen <ToryClasen@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
autoflake = "^1.4"
black = "^22.1.0"
cohesion = "^1.0.0"
commitizen = "^2.21.2"
darglint = "^1.8.1"
dlint = "^0.12.0"
flake8 = "^4.0.1"
flake8-bandit = "^3.0.0"
flake8-bugbear = "^22.3.20"
flake8-commas = "^2.1.0"
flake8-comprehensions = "^3.8.0"
flake8-debugger = "^4.0.0"
flake8-docstrings = "^1.6.0"
flake8-eradicate = "^1.2.0"
isort = "^5.10.1"
mypy = "^0.941"
safety = "^1.10.3"
pre-commit = "^2.17.0"
pyproject-flake8 = "^0.0.1-alpha.2"
pytest = "^7.1.1"
pytest-clarity = "^1.0.1"
pytest-cov = "^3.0.0"
pytest-sugar = "^0.9.4"
pyupgrade = "^2.31.1"
vulture = "^2.3"

[tool.pytest.ini_options]
addopts = "-p no:warnings -ra -q --cov=src/"
testpaths = ["tests/"]

[tool.vulture]
min_confidence = 80
paths = ["src", "tests"]
sort_by_size = true
verbose = true
